tests/fixtures/invalid/duplicate_aggregate_field_in_declaration_list.c
struct Bad { int x, y, x; };

int main(void) {
    return 0;
}
